apps/overseerr/deployment-overseerr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: overseerr
  name: overseerr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      containers:
        - image: lscr.io/linuxserver/overseerr:1.35.0
          name: overseerr
          requests: {}
          ports:
            - containerPort: 5055
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: overseerr
      restartPolicy: Always
      volumes:
        - name: overseerr
          persistentVolumeClaim:
            claimName: overseerr
