apps/overseerr/service-overseerr.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: overseerr
  name: overseerr
spec:
  ports:
    - name: "5055"
      port: 5055
      targetPort: 5055
  selector:
    app: overseerr
