apps/overseerr/ingress-overseerr.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
  namespace: plex
spec:
  ingressClassName: cilium
  rules:
  - host: overseerr.almothana.xyz
    http:
      paths:
      - backend:
          service:
            name: overseerr
            port:
              number: 5055
        path: /
        pathType: Prefix
  tls:
    - hosts:
        - overseerr.almothana.xyz
      secretName: almothana-xyz-tls
